--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         .option-button {
             background-color: #28a745; width: 90%; max-width: 320px;
             margin-bottom: 10px; /* Garanterer luft */
+            margin-right: 10px;
         }
         .option-button:hover:not(:disabled) { background-color: #218838; }
 
