Update time style to informal mode
Changed time style from 'formal' to 'informal'.

--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
         }
 
         // Start appen
-        setTimeStyle('formal'); // Starter i Formell-modus
+        setTimeStyle('informal'); // Starter i Uformell-modus
         setMode('read'); // Starter i Modus 1
 
     </script>
