Replace placeholder with link to verb app

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <section class="subject-section">
                 <h2>Grammatikk</h2>
                 <ul class="resource-list">
-                    <li><i>(Kommer snart)</i></li>
+                    <a href="verb-app.html">Øv på verbbøyning (Interaktiv app)</a>
                 </ul>
             </section>
         </main>
